Full green color + Bugs fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,12 @@ target_link_libraries(readtiff TinyTIFF)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 add_library(interpolate ${SRC}/interpolation/directional.cpp)
 
+add_library(arithmetics ${SRC}/support/bitmap_arithmetics.cpp)
+
+add_library(posteriori ${SRC}/decision/posteriori.cpp)
+target_link_libraries(posteriori arithmetics)
+
+
 add_executable (menon ${SRC}/main.cpp)
-target_link_libraries(menon readtiff interpolate)
+target_link_libraries(menon readtiff interpolate posteriori)
 set_target_properties(menon PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../ )
