Added header menon.hpp. All headers gathered there

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,20 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPARALLEL")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSIMD")
 # Disable asserts
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
+# Set RGGB mosaic format
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DRGGB")
 
 
 ###############################################################
+
+add_library(rgb_utils ${SRC}/support/rgb.cpp)
+
 add_library(readtiff ${SRC}/io/format/tiff.cpp)
-target_link_libraries(readtiff TinyTIFF)
+target_link_libraries(readtiff TinyTIFF rgb_utils)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 add_library(interpolate ${SRC}/interpolation/directional.cpp)
+
 
 add_library(arithmetics ${SRC}/support/bitmap_arithmetics.cpp)
 
